--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ footer {
     height: 100%;
 }
 
-.lightbox-content iframe {
+lightbox-content iframe {
     width: 100%;
     height: 100%;
     border: none;
